download dummy data from hdfs

--- a/train/src/main/notebook/dummy_docker.ipynb
+++ b/train/src/main/notebook/dummy_docker.ipynb
@@ -10,7 +10,9 @@
     "pd.set_option('display.max_colwidth', -1)\n",
     "\n",
     "import os\n",
-    "dirpath = os.getcwd()"
+    "from pathlib import Path\n",
+    "dirpath = os.getcwd()\n",
+    "projectPath = str(Path(dirpath).parent)"
    ]
   },
   {
@@ -348,8 +350,7 @@
     }
    ],
    "source": [
-    "colnames=['package'] \n",
-    "df = pd.read_csv(dirpath+'/requirements.txt', names=colnames, header=None)\n",
+    "df = pd.read_csv(projectPath+'/data/big.csv')\n",
     "df.head(10)"
    ]
   },
