--- a/train/src/main/notebook/qc-contact-request-deletionreason.ipynb
+++ b/train/src/main/notebook/qc-contact-request-deletionreason.ipynb
@@ -2,15 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/usr/local/lib/python3.6/importlib/_bootstrap.py:219: ImportWarning: can't resolve package from __spec__ or __package__, falling back on __name__ and __path__\n",
+      "  return f(*args, **kwds)\n",
+      "/usr/local/lib/python3.6/site-packages/tensorflow/python/keras/backend.py:5506: ResourceWarning: unclosed file <_io.TextIOWrapper name='/root/.keras/keras.json' mode='r' encoding='UTF-8'>\n",
+      "  _config = json.load(open(_config_path))\n",
+      "/usr/local/lib/python3.6/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "        <script type=\"text/javascript\">\n",
+       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
+       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
+       "        if (typeof require !== 'undefined') {\n",
+       "        require.undef(\"plotly\");\n",
+       "        requirejs.config({\n",
+       "            paths: {\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
+       "            }\n",
+       "        });\n",
+       "        require(['plotly'], function(Plotly) {\n",
+       "            window._Plotly = Plotly;\n",
+       "        });\n",
+       "        }\n",
+       "        </script>\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import warnings\n",
-    "# warnings.filterwarnings('ignore')      # never show warnings _> BIG CHANGE\n",
+    "# warnings.filterwarnings('ignore')      # never show warnings\n",
     "warnings.filterwarnings(action='once') # show warnings once and never again\n",
     "\n",
     "from keras.preprocessing.text import Tokenizer\n",
@@ -56,30 +96,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/target/notebook/input/gfmodel_v4.vec\n",
+      "/usr/target/notebook/input/qc-deletionreason-contactrequest.snappy.parquet\n",
+      "/usr/target/notebook/input/qc-notdeleted.snappy.parquet\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
-    "for dirname, _, filenames in os.walk('data'):\n",
+    "for dirname, _, filenames in os.walk('/usr/target'):\n",
     "    for filename in filenames:\n",
     "        print(os.path.join(dirname, filename))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find threshold for precision \n",
-    "with open(\"docker_save_data.txt\",\"w\") as file_thresholds:\n",
-    "    precisions_thresholds = [0.8, 0.85, 0.9, 0.95] \n",
-    "    for p in precisions_thresholds: \n",
-    "        t = 3333\n",
-    "        msg = \"Threshold with precision > %.2f%%: %.2f%%\" % (p, t)\n",
-    "        print(msg)\n",
-    "        file_thresholds.write(msg)"
    ]
   },
   {
@@ -91,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,12 +143,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pos dataset: 11479\n",
+      "Neg dataset: 831203\n"
+     ]
+    }
+   ],
    "source": [
-    "posfile = 'data/qc-deletionreason-contactrequest.snappy.parquet'\n",
-    "negfile = 'data/qc-notdeleted.snappy.parquet'\n",
+    "posfile = '/usr/target/notebook/input/qc-deletionreason-contactrequest.snappy.parquet'\n",
+    "negfile = '/usr/target/notebook/input/qc-notdeleted.snappy.parquet'\n",
     "\n",
     "pos = pyparquet.read_table(posfile).to_pandas()[[\"label\", \"decoded_title\", \"decoded_body\"]]\n",
     "neg = pyparquet.read_table(negfile).to_pandas()[[\"label\", \"decoded_title\", \"decoded_body\"]]\n",
@@ -125,9 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pos dataset: 10000\n",
+      "Neg dataset: 10000\n"
+     ]
+    }
+   ],
    "source": [
     "# reduce the size of neg and pos to N\n",
     "N = 10000.0\n",
@@ -270,7 +322,7 @@
    "source": [
     "# comment it because of lower word coverage (v4)\n",
     "# EMBEDDING_FILE = '../input/gf-embeddings-v2/gfmodel_v6.vec' --> memory error\n",
-    "EMBEDDING_FILE = '../data/gfmodel_v4.vec'\n",
+    "EMBEDDING_FILE = '/usr/target/notebook/input/gfmodel_v4.vec'\n",
     "\n",
     "embeddings_index = {}\n",
     "f = open(EMBEDDING_FILE)\n",
@@ -468,7 +520,7 @@
    "outputs": [],
    "source": [
     "# Find threshold for precision \n",
-    "with open(\"qc_contact_request_deletion_reason_thresholds.txt\",\"w\") as file_thresholds:\n",
+    "with open(\"/usr/target/notebook/output/qc_contact_request_deletion_reason_thresholds.txt\",\"w\") as file_thresholds:\n",
     "    precisions_thresholds = [0.8, 0.85, 0.9, 0.95] \n",
     "    for p in precisions_thresholds: \n",
     "        t = min(precision_recall[precision_recall['Precision']>p][\"Thresholds\"])\n",
@@ -629,10 +681,10 @@
    "outputs": [],
    "source": [
     "# save tokenizer for model\n",
-    "with open('qc_contact_request_deletion_reason_tokenizer.pickle', 'wb') as handle:\n",
+    "with open('/usr/target/notebook/output/qc_contact_request_deletion_reason_tokenizer.pickle', 'wb') as handle:\n",
     "    pickle.dump(tokenizer, handle, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "    \n",
-    "with open('qc_contact_request_deletion_reason_tokenizer.json', 'w', encoding='utf-8') as f:\n",
+    "with open('/usr/target/notebook/output/qc_contact_request_deletion_reason_tokenizer.json', 'w', encoding='utf-8') as f:\n",
     "    f.write(tokenizer.to_json())    \n"
    ]
   },
@@ -647,7 +699,7 @@
     "model.fit(data_X, data_y, epochs=epoch_num, batch_size=64, validation_split=0.1,callbacks=[EarlyStopping(monitor='val_loss', patience=3, min_delta=0.0001)])\n",
     "\n",
     "# save model\n",
-    "modelfile = \"qc_contact_request_deletion_reason_model.h5\"\n",
+    "modelfile = \"/usr/target/notebook/output/qc_contact_request_deletion_reason_model.h5\"\n",
     "model.save(modelfile)"
    ]
   },
