to be fix not validated notebook

--- a/train/src/main/notebook/demo_text_classification.ipynb
+++ b/train/src/main/notebook/demo_text_classification.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# wtf with not validated notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "from pathlib import Path\n",
     "import pyarrow.parquet as pyparquet\n",
