test dependencies updates pre-commit hooks

--- a/train/src/main/notebook/dummy_docker.ipynb
+++ b/train/src/main/notebook/dummy_docker.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# for testing docker\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_colwidth', -1)\n",
     "\n",
