--- a/train/src/main/notebook/dummy_docker.ipynb
+++ b/train/src/main/notebook/dummy_docker.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_colwidth', -1)\n",
     "\n",
@@ -31,15 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dirpath+'/requirements.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import os \n",
     "os.listdir()"
    ]
@@ -50,8 +40,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(projectPath+'/data/big.csv')\n",
-    "df.head(10)"
+    "# df = pd.read_csv(projectPath+'/data/big.csv')\n",
+    "# df.head(10)"
    ]
   },
   {
@@ -60,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(dirpath+'/output_from_notebook.csv')"
+    "# df.to_csv(dirpath+'/output_from_notebook.csv')"
    ]
   }
  ],
