--- a/train/src/main/notebook/demo_text_classification.ipynb
+++ b/train/src/main/notebook/demo_text_classification.ipynb
@@ -181,11 +181,10 @@
     "    question_X = question[\"question_text\"].fillna(\"_na_\").values\n",
     "    \n",
     "    question_X = tokenizer.texts_to_sequences(question_X)\n",
-    "\n",
-    "    ## Pad the sentences \n",
+    " \n",
     "    question_X = pad_sequences(question_X, maxlen=maxlen, padding=meta_parameters['padding'], truncating=meta_parameters['truncating'])\n",
     "    \n",
-    "    return question_X\n"
+    "    return question_X"
    ]
   },
   {
@@ -196,7 +195,7 @@
    "source": [
     "tokenizerfile = resources_dir/\"tokenizer.pickle\"\n",
     "with open(tokenizerfile, 'rb') as handle:\n",
-    "    tokenizer = pickle.load(handle)\n"
+    "    tokenizer = pickle.load(handle)"
    ]
   },
   {
@@ -371,7 +370,7 @@
     "layout45 = go.Layout(barmode='overlay')\n",
     "figure45 = go.Figure(data=data45, layout=layout45)\n",
     "\n",
-    "iplot(figure45, filename='probability overlaid histogram')\n"
+    "iplot(figure45, filename='probability overlaid histogram')"
    ]
   },
   {
@@ -383,7 +382,7 @@
     "threshold = 0.9\n",
     "y_true = [x for x in test_y]\n",
     "y_pred = [1 if x > threshold else 0 for x in prediction]\n",
-    "confusion_matrix(y_true, y_pred)\n"
+    "confusion_matrix(y_true, y_pred)"
    ]
   },
   {
