--- a/train/src/main/notebook/demo_text_classification.ipynb
+++ b/train/src/main/notebook/demo_text_classification.ipynb
@@ -43,7 +43,7 @@
     "cwd = Path(os.getcwd())\n",
     "data_dir = cwd.parent/'data'\n",
     "resources_dir = cwd.parent/'resources'\n",
-    "target_dir = cwd.parent.parent.parent/'target/ml'"
+    "target_dir = cwd.parent./'output'"
    ]
   },
   {
@@ -307,7 +307,7 @@
    "outputs": [],
    "source": [
     "# Find threshold for precision \n",
-    "with open(cwd/\"output/qc_contact_request_deletion_reason_thresholds.txt\",\"w\") as file_thresholds:\n",
+    "with open(target_dir/\"qc_thresholds.txt\",\"w\") as file_thresholds:\n",
     "    precisions_thresholds = [0.8, 0.85, 0.9, 0.95] \n",
     "    for p in precisions_thresholds: \n",
     "        t = min(precision_recall[precision_recall['Precision']>p][\"Thresholds\"])\n",
