change output path

--- a/train/src/main/notebook/demo_text_classification.ipynb
+++ b/train/src/main/notebook/demo_text_classification.ipynb
@@ -43,7 +43,7 @@
     "cwd = Path(os.getcwd())\n",
     "data_dir = cwd.parent/'data'\n",
     "resources_dir = cwd.parent/'resources'\n",
-    "target_dir = cwd.parent./'output'"
+    "target_dir = cwd.parent/'output'"
    ]
   },
   {
