--- a/train/src/main/notebook/demo_text_classification.ipynb
+++ b/train/src/main/notebook/demo_text_classification.ipynb
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate test set"
+    "## Evaluate test set"
    ]
   },
   {
@@ -419,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save and package"
+    "## Save and package"
    ]
   },
   {
