--- a/train/src/main/notebook/demo_text_classification.ipynb
+++ b/train/src/main/notebook/demo_text_classification.ipynb
@@ -215,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load embedding"
+    "### Load prepared embedding"
    ]
   },
   {
